[package]
name = "openvm-tests"
version = "0.1.0"
edition = "2021"

[dependencies]
# openvm
openvm = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f369da8dee065a089fb72f3580af7dcaf9", default-features = false, features = [
    "std",
] }
openvm-algebra-complex-macros = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f369da8dee065a089fb72f3580af7dcaf9", default-features = false }
openvm-algebra-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f369da8dee065a089fb72f3580af7dcaf9", default-features = false }
openvm-ecc-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f369da8dee065a089fb72f3580af7dcaf9", default-features = false, features = [
    "k256",
    "p256",
] }
openvm-pairing-guest = { git = "https://github.com/openvm-org/openvm.git", rev = "3c35e9f369da8dee065a089fb72f3580af7dcaf9", default-features = false, features = [
    "bn254",
    "bls12_381",
] }

# revm
revm-precompile = { git = "https://github.com/axiom-crypto/revm", branch = "v43-openvm", default-features = false, features = [
    "std",
    # p256 precompile
    "secp256r1",
    # openvm intrinsics
    "openvm-bn",
    "openvm-sha2",
    "openvm-k256",
    "openvm-kzg",
    "openvm-kzg-intrinsics",
] }
revm-primitives = { git = "https://github.com/axiom-crypto/revm", branch = "v43-openvm", default-features = false, features = [
    "std",
    # openvm intrinsics
    "openvm-kzg",
] }

# testing
hex-literal = "0.4.1"
